# iotmer-sdk-esp-idf

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  release-please-config.json
components/iotmer/: CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  idf_component.yml  iotmer_client.c  iotmer_config.c  iotmer_device_auth.c  iotmer_internal.h  iotmer_nvs.c  iotmer_ota.c  iotmer_presence.c  iotmer_provision.c  iotmer_telemetry.c  iotmer_topics.c  iotmer_wifi.c
components/iotmer/examples/: README.md
components/iotmer/examples/01_provisioning/: CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults
components/iotmer/examples/01_provisioning/main/: CMakeLists.txt  main.c
components/iotmer/examples/02_telemetry/: CMakeLists.txt  README.md  sdkconfig.defaults
components/iotmer/examples/02_telemetry/main/: main.c
components/iotmer/examples/03_lwt_presence/: CMakeLists.txt  README.md  sdkconfig.defaults
components/iotmer/examples/04_config/: CMakeLists.txt  README.md  sdkconfig.defaults
components/iotmer/examples/05_ble_json/: CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults
components/iotmer/examples/05_ble_wifi_prov/: CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults
components/iotmer/include/: iotmer_client.h  iotmer_config.h  iotmer_wifi.h
components/iotmer_ble_wifi_prov/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml  iotmer_ble_wifi_prov.c  iotmer_ble_wifi_prov_priv.h
components/iotmer_ble_wifi_prov/include/: iotmer_ble_wifi_prov.h
(+52 files in other folders)
